--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "lib"
   ],
   "dependencies": {
+    "cross-spawn": "^3.0.1",
     "npm-run-path": "^1.0.0",
     "semver": "^5.1.0",
-    "shell-quote": "^1.6.0",
-    "cross-spawn": "^2.2.2"
+    "shell-quote": "^1.6.0"
   },
   "scripts": {
     "start": "ava --watch",
@@ -19,15 +19,8 @@
     "cover": "abby cover:*",
     "cover:test": "nyc --reporter=lcov --reporter=text ava",
     "cover:report": "node -e \"if(process.env.TRAVIS){}else{process.exit(1)}\" && codeclimate-test-reporter < coverage/lcov.info || echo skip coverage report",
-    "build": "abby 'babel src --out-dir lib' --env --parse raw",
+    "build": "abby 'babel src --out-dir lib' --env",
     "postversion": "git push --follow-tags && conventional-github-releaser -p angular -r 0"
-  },
-  "abigail": {
-    "plugins": {
-      "watch": false,
-      "parse": "serial",
-      "launch": "force"
-    }
   },
   "ava": {
     "require": [
@@ -35,12 +28,13 @@
     ]
   },
   "devDependencies": {
-    "abigail": "^1.6.1",
-    "ava": "^0.14.0",
+    "abigail": "^1.7.1",
+    "ava": "^0.15.0",
     "babel-cli": "^6.6.5",
     "babel-eslint": "^6.0.2",
-    "babel-plugin-add-module-exports": "^0.1.2",
+    "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-espower": "^2.1.2",
+    "babel-plugin-transform-bluebird": "^0.0.2",
     "babel-plugin-transform-object-assign": "^6.5.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-1": "^6.5.0",
@@ -51,7 +45,8 @@
     "conventional-changelog-cli": "^1.1.1",
     "conventional-github-releaser": "^1.1.1",
     "eslint": "^2.6.0",
-    "eslint-config-airbnb": "^7.0.0",
+    "eslint-config-airbnb": "^9.0.1",
+    "eslint-plugin-import": "^1.8.0",
     "nyc": "^6.1.1"
   },
   "keywords": [
